--- a/css/main.css
+++ b/css/main.css
@@ -545,6 +545,7 @@ section {
   }
 }
 #main-section h1 {
+  padding: 0 15px;
   text-align: center;
   width: 100%;
   position: absolute;
@@ -556,7 +557,7 @@ section {
   color: #ffffff;
   font-size: 30px;
   font-weight: 700;
-  letter-spacing: 42px;
+  letter-spacing: 3.3vw;
 }
 #main-section h1 span {
   opacity: 0;
@@ -862,4 +863,21 @@ section {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.7px;
+}
+@media (max-width: 1199.9px) {
+  #main-section h1 {
+    font-size: 26px;
+  }
+  #main-section .main-desc {
+    font-size: 16px;
+  }
+}
+@media (max-width: 768px) {
+  #main-section h1 {
+    font-size: 20px;
+    letter-spacing: 2.8vw;
+  }
+  #main-section .main-desc {
+    font-size: 13px;
+  }
 }
